 * #919: Document a policy for versioning and breaking changes:
   https://torsion.org/borgmatic/docs/how-to/upgrade/#versioning-and-breaking-changes
 * #911: Add a "key change-passphrase" action to change the passphrase protecting a repository key.
 * #921: BREAKING: Change soft failure command hooks to skip only the current repository rather than
   all repositories in the configuration file.

1.8.14
 * #896: Fix an error in borgmatic rcreate/init on an empty repository directory with Borg 1.4.
 * #898: Add glob ("*") support to the "--repository" flag. Just quote any values containing
   globs so your shell doesn't interpret them.
 * #899: Fix for a "bad character" Borg error in which the "spot" check fed Borg an invalid pattern.
 * #900: Fix for a potential traceback (TypeError) during the handling of another error.
 * #904: Clarify the configuration reference about the "spot" check options:
   https://torsion.org/borgmatic/docs/reference/configuration/
 * #905: Fix the "source_directories_must_exist" option to work with relative "source_directories"
   paths when a "working_directory" is set.
 * #906: Add documentation details for how to run custom database dump commands using binaries from
   running containers:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#containers
 * Fix a regression in which the "color" option had no effect.
 * Add a recent contributors section to the documentation, because credit where credit's due! See:
   https://torsion.org/borgmatic/#recent-contributors

1.8.13
 * #298: Add "delete" and "rdelete" actions to delete archives or entire repositories.
 * #785: Add an "only_run_on" option to consistency checks so you can limit a check to running on
   particular days of the week. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/deal-with-very-large-backups/#check-days
 * #885: Add an Uptime Kuma monitoring hook. See the documentation for more information: